Update Db Connection

--- a/TaskTree/appsettings.json
+++ b/TaskTree/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApiDatabase": "User ID =postgres;Password=Hasanhut123;Server=localhost;Port=5432;Database=TaskTree;Integrated Security=true;Pooling=true"
+  }
 }
